samples/_failures_safe/1761614637_fd411d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4488ebed.c: In function ‘main’:
./samples/SAFE/__tmp_4488ebed.c:161:29: error: expected ‘]’ at end of input
  161 |     if (len > 0 && input[len
      |                             ^
      |                             ]
./samples/SAFE/__tmp_4488ebed.c:161:5: error: expected declaration or statement at end of input
  161 |     if (len > 0 && input[len
      |     ^~
